spacing issue fix

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -15584,32 +15584,33 @@ div.ff-stream {
   font-style: italic;
   text-transform: lowercase;
   padding-top: 30px;
+  padding-bottom: 30px;
   font-weight: 600;
   font-family: Libre Baskerville,Baskerville,georgia,serif !important;
 }
 
-/* line 113, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
+/* line 114, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
 .main-content .contentLeft .footer-section {
   padding: 2rem 0 3rem;
 }
 
-/* line 116, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
+/* line 117, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
 .main-content .contentLeft .footer-section .contact-details a {
   font-size: 20.4px;
 }
 
-/* line 118, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
+/* line 119, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
 .main-content .contentLeft .footer-section .contact-details a:hover {
   color: #4aa751;
 }
 
-/* line 122, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
+/* line 123, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
 .main-content .contentLeft .footer-section .contact-details h4 {
   font-size: 20.4px;
 }
 
 @media (min-width: 992px) {
-  /* line 115, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
+  /* line 116, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
   .main-content .contentLeft .footer-section .contact-details {
     margin: 25px 0;
   }
@@ -15622,7 +15623,7 @@ div.ff-stream {
   }
 }
 
-/* line 135, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
+/* line 136, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
 .contentRight {
   position: fixed;
   left: 550px;
@@ -15632,7 +15633,7 @@ div.ff-stream {
   display: block;
 }
 
-/* line 142, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
+/* line 143, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
 .contentRight .main-image {
   background-size: cover;
   background-repeat: no-repeat;
@@ -15641,7 +15642,7 @@ div.ff-stream {
 }
 
 @media (max-width: 768px) {
-  /* line 135, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
+  /* line 136, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_global.scss */
   .contentRight {
     display: none;
   }
@@ -15658,7 +15659,7 @@ div.ff-stream {
 .tab {
   position: relative;
   display: inline-block;
-  padding: 15px 15px 25px;
+  padding: 15px 15px 25px 0;
   border: 1px solid transparent;
   border-bottom: 0;
   cursor: pointer;
@@ -15689,12 +15690,12 @@ div.ff-stream {
   }
 }
 
-/* line 36, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
+/* line 35, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
 .radio {
   display: none;
 }
 
-/* line 39, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
+/* line 38, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
 #one:checked ~ .panels #product-1CG6P1slxnr9TSNnPzvZ,
 #two:checked ~ .panels #product-8FVGmVx4JjQZRUsxtYrL,
 #three:checked ~ .panels .coming-soon,
@@ -15704,7 +15705,7 @@ div.ff-stream {
   display: block;
 }
 
-/* line 47, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
+/* line 48, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
 #one:checked ~ .tabs #one-tab,
 #two:checked ~ .tabs #two-tab,
 #three:checked ~ .tabs #three-tab,
@@ -15715,7 +15716,7 @@ div.ff-stream {
   font-weight: 600;
 }
 
-/* line 55, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
+/* line 56, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
 #one:checked ~ .tabs #one-tab:after,
 #two:checked ~ .tabs #two-tab:after,
 #three:checked ~ .tabs #three-tab:after,
@@ -15733,7 +15734,7 @@ div.ff-stream {
   background: #4aa751;
 }
 
-/* line 68, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
+/* line 69, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
 .tabs {
   overflow-x: scroll;
   overflow-y: hidden;
@@ -15742,9 +15743,16 @@ div.ff-stream {
   width: 450px;
 }
 
-/* line 74, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
+/* line 75, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
 .tabs::-webkit-scrollbar {
   display: none;
+}
+
+@media (max-width: 768px) {
+  /* line 69, ../../../xampp/htdocs/GGB-Home/ggb-homepage/assets/scss/_tabs.scss */
+  .tabs {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=custom.css.map */
