--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -107,6 +107,7 @@
 		    font-style: italic;
 		    text-transform: lowercase;
 		    padding-top: 30px;
+		    padding-bottom: 30px;
 		    font-weight: 600;
 		    font-family: Libre Baskerville,Baskerville,georgia,serif !important;
 		}
